# gctoolsplusplus

./: .gitignore  .gitmodules  CMakeLists.txt  license.txt  readme.md
include/: Archive.hpp  Bti.hpp  Compression.hpp  GCM.hpp  Util.hpp
src/: Archive.cpp  Bti.cpp  Compression.cpp  GCM.cpp  Util.cpp
